kubernetes/clusters/1276-dev/supabase/supabase-routes/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: supabase
  namespace: supabase
  annotations:
    external-dns.alpha.kubernetes.io/hostname: supabase.dev.kian.sh
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - supabase.dev.kian.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /rest/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: supabase-supabase-rest
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /auth/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: supabase-supabase-auth
          port: 9999
    - matches:
        - path:
            type: PathPrefix
            value: /realtime/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: supabase-supabase-realtime
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /storage/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: supabase-supabase-storage
          port: 5000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: supabase-supabase-studio
          port: 3000
